2009-06-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes.

	* Makefile.am: Fix rule `show-vars': add `tools/bin/' to PATH, not
	`bin/'.

	* configure.am: Define new conditional ENABLE_DEMOS for building
	SL programs during `make all'.

	* Makefile.am,
	* programs/benchmarks/blas/Makefile.am,
	* programs/benchmarks/fft/Makefile.am,
	* programs/benchmarks/ll/Makefile.am,
	* programs/demo/Makefile.am: Use it.

	* programs/benchmarks/blas/blas-test-saxpy.sl,
	* programs/benchmarks/ll/ll2.sl,
	* programs/benchmarks/ll/ll4.sl: Define some test cases via SLT_RUN.

	* programs/benchmarks/nas/is/Makefile.am,
	* programs/benchmarks/quicksort/Makefile.am: Distribute some more files.

	* programs/benchmarks/Makefile.am: Recurse also into `ll'.

	* doc/NEWS.txt: Mention benchmark programs.
	
2009-06-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small fixes.
	
	* programs/benchmarks/ll/ll2.sl,
	* programs/benchmarks/ll/ll4.sl: Implement some more benchmarks.

	* tools/bin/spp (pppalpha.remdefaults): Default place is now 0 as
	per [svp27], not 1.

2009-06-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/lib/t-pppalpha/include/sl_support.h: Update PLACE_LOCAL
	with definition from [svp27].

	* tools/lib/t-utc0/slimpl.m4: Replace definition of `sl_decl' to
	avoid emitting a dangling brace after the declaration, as would
	happen when reusing `sl_def' blindly.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/Makefile.am (cce.1 slc.1 slr.1 slt.1): Revert previous
	change since the temporary files are different anyways. Give
	absolute pathname to help2man.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/Makefile.am (cce.1 slc.1 slr.1 slt.1): Use different
	temporary file names to avoid race condition with script build
	rule.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* programs/benchmarks/nas/Makefile.am
	* programs/benchmarks/nas/is/Makefile.am
	* programs/benchmarks/blas/Makefile.am